# tests-and-snippets

./: .gitignore  Custom_8h_source.html  Doxyfile  Point2D_8h_source.html  README.md  annotated.html  annotated_dup.js  bug.html  classCourseWindow-members.html  classCourseWindow.html  classCourseWindow.js  classCourseWindow__coll__graph.dot  classCourseWindow__inherit__graph.map  classCourseWindow__inherit__graph.md5  classFragmentShaderLoader-members.html  classFragmentShaderLoader.html  classFragmentShaderLoader.js  classFragmentShaderLoader__coll__graph.map  classFragmentShaderLoader__inherit__graph.dot  classFragmentShaderLoader__inherit__graph.md5  classGLArea-members.html  classGLArea.html  classGLArea.js  classGLArea__coll__graph.dot  classGLArea__inherit__graph.map  classGLArea__inherit__graph.md5  classMainWindow-members.html  classMainWindow.html  classMainWindow.js  classMainWindow__inherit__graph.dot  classMainWindow__inherit__graph.map  classMainWindow__inherit__graph.md5  classNewWindow-members.html  classNewWindow.html  classNewWindow.js  classNewWindow__inherit__graph.dot  classNewWindow__inherit__graph.map  classNewWindow__inherit__graph.md5  classOGLWindow-members.html  classOGLWindow.html  (+100 more)
.github/workflows/: main.yml
001-python-embed/: CMakeLists.txt  Custom.c  Custom.h  Point2D.c  Point2D.h  assembled.c  compile-python.sh  compilee-python.sh  dump.py  initTest.cpp  main.cpp  spammodule.c  spammodule.cpp  spammodule.hpp  to_init.txt
001-python-embed/custom/: thing.py
001-python-embed/old/: compile-python.sh
002-test-gtkmm3/: CMakeLists.txt  Experimental.cpp  Experimental.hpp  glarea.cpp  glarea.hpp  gui-test.cpp  gui-test.hpp  main.cpp  minimal_gtk_epoxy.cpp  minimal_gtk_epoxy.hpp  ogl_window.cpp  ogl_window.hpp  opengl_gtk.cpp  opengl_gtk.hpp  primitives.hpp  several-windows.cpp  several-windows.hpp  shaders.cpp  shaders.hpp
002-test-gtkmm3/.cache/clangd/index/: main.cpp.60E40C46BF2CD086.idx
002-test-gtkmm3/shaders/: fragment_shader.glsl  vertex_shader.glsl
003-lambda-expressions/: main.cpp
004-node-graph/: G  main.cpp  node-graph.cpp  node-graph.hpp
005-vg-architecture/: main.cpp
006-delegator/: ideal.cpp  main.cpp  visitor.cpp
007-pgm-generator/: gen-pgm.py  main.cpp
008-logger/: delegate.cpp  main.cpp
pages/: embedpython.cpp  gtkmm.cpp  lambdas.cpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  searchdata.js
